--- a/projetoReceitas/index.html
+++ b/projetoReceitas/index.html
@@ -64,5 +64,8 @@
             </section>
         </main>
     </div>
+    <footer>
+        Feito com amor pela Rocketseat
+    </footer>
 </body>
 </html>
